--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,11 +18,11 @@ jobs:
           name: Install dependencies
           command: |
             # ideally, use Poetry or Pipenv for Python dependency management
-            pip install -r requirements.txt
+            pip3 install -r requirements.txt
       - run:
           name: Build images
           command: |
-            python build_images.py complete slim nginx
+            python3 build_images.py complete slim nginx
       - run:
           name: Check images
           command: |
